--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "cross-env NODE_ENV='test' node --test",
-    "dev": " nodemon index.js"
+    "dev": "cross-env NODE_ENV='test' nodemon index.js"
   },
   "keywords": [],
   "author": "",
